@@ -21,6 +21,7 @@ which must be a string containing a path specification.
 \var{pathname} can be either absolute (like
 \file{/usr/src/Python-1.5/Makefile}) or relative (like
 \file{../../Tools/*/*.gif}), and can contain shell-style wildcards.
+Broken symlinks are included in the results (as in the shell).
 \end{funcdesc}
 
 For example, consider a directory containing only the following files:
